--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -1102,6 +1102,75 @@
 
 
 
+			                    {{if (dynamicComponentField.type == 'apps_group_selector')}}
+			                        <div class="propertyGroup_property_horizontalField {{if dynamicComponentField.className}}${dynamicComponentField.className}{{/if}}">
+			                            <div class="propertyGroup_property_input">
+
+			                                <div class="propertyGroup_property_selectField {{if dynamicComponentField.typeClassName}}${dynamicComponentField.typeClassName}{{/if}}">
+			                                    <div class="propertyGroup_property_label ">${dynamicComponentField.typeLabel}</div>
+			                                    <select data-field="${dynamicComponentField.typeName}" name="${dynamicComponentField.typeName}" class="input-medium">
+			                                    {{each(n, nav) W.component.getSelectSource(dynamicComponentField.typeSource, component)}}
+			                                        <option value="${nav.typeValue}" {{if model.get(dynamicComponentField.typeName) == nav.typeValue}}selected="selected"{{/if}}>
+			                                            {{if nav.typeName }}
+			                                                ${nav.typeName}
+			                                            {{else}}
+			                                                ${nav.typeValue}
+			                                            {{/if}}
+			                                        </option>
+			                                    {{/each}}
+			                                    </select>
+			                                </div>
+
+
+			                                <div class="propertyGroup_property_textField {{if dynamicComponentField.daysClassName}}${dynamicComponentField.daysClassName}{{/if}}">
+			                                    <div class="propertyGroup_property_label">${dynamicComponentField.daysLabel}</div>
+			                                    <div class="propertyGroup_property_input">
+			                                        <input
+			                                            type="text"
+			                                            style="width:${dynamicComponentField.days_size};"
+			                                            class="input-small xui-propertyGroup-input"
+			                                            data-field="${dynamicComponentField.days_name}"
+			                                            value=""
+			                                            placeholder="${dynamicComponentField.days_placeholder}"
+			                                            {{if dynamicComponentField.days_maxLength}}maxlength="${dynamicComponentField.days_maxLength}"{{/if}}
+			                                            {{if dynamicComponentField.days_validate}}{{html dynamicComponentField.days_validate}}{{/if}} />
+			                                        {{if dynamicComponentField.days_annotation}}
+			                                        <span>
+			                                            {{html dynamicComponentField.days_annotation}}
+			                                        </span>
+			                                        {{/if}}
+			                                    </div>
+			                                </div>
+
+
+			                                <div class="propertyGroup_property_textField {{if dynamicComponentField.priceClassName}}${dynamicComponentField.priceClassName}{{/if}}">
+			                                    <div class="propertyGroup_property_label">${dynamicComponentField.priceLabel}</div>
+			                                    <div class="propertyGroup_property_input">
+			                                        <input
+			                                            type="text"
+			                                            style="width:${dynamicComponentField.price_size};"
+			                                            class="input-small xui-propertyGroup-input"
+			                                            data-field="${dynamicComponentField.price_name}"
+			                                            value=""
+			                                            placeholder="${dynamicComponentField.price_placeholder}"
+			                                            {{if dynamicComponentField.price_maxLength}}maxlength="${dynamicComponentField.price_maxLength}"{{/if}}
+			                                            {{if dynamicComponentField.price_validate}}{{html dynamicComponentField.price_validate}}{{/if}} />
+			                                        {{if dynamicComponentField.price_annotation}}
+			                                        <span>
+			                                            {{html dynamicComponentField.price_annotation}}
+			                                        </span>
+			                                        {{/if}}
+			                                    </div>
+			                                </div>
+
+
+			                                <div class="errorHint"></div>
+			                            </div>
+			                        </div>
+			                    {{/if}}
+
+
+
                                 {{if (dynamicComponentField.type == 'selector_v1')}}
 								<div class="propertyGroup_property_selectField propertyGroup_property_horizontalField  {{if field.className}}${field.className}{{/if}}">
                                     {{if dynamicComponentField.displayName}}
