--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -286,6 +286,7 @@
 					{{/if}}
 
 
+
 					{{if (field.type == 'checkbox-group')}}
 					<div class="propertyGroup_property_checkboxField propertyGroup_property_horizontalField">
 						<div class="propertyGroup_property_label">${field.displayName}</div>
@@ -705,10 +706,12 @@
 							<div class="propertyGroup_property_input">
 
 								<div class="propertyGroup_property_selectField {{if field.typeClassName}}${field.typeClassName}{{/if}}">
+
 									<div class="propertyGroup_property_label ">${field.typeLabel}</div>
+
 									<select data-field="${field.typeName}" name="${field.typeName}" class="input-medium">
 									{{each(n, nav) W.component.getSelectSource(field.typeSource, component)}}
-										<option value="${nav.typeValue}" {{if model.get(field.typeName) == nav.typeValue}}selected="selected"{{/if}}>
+										<option value="${nav.typeValue}" {{if model.get(field.name) == nav.typeValue}}selected="selected"{{/if}}>
 											{{if nav.typeName }}
 												${nav.typeName}
 											{{else}}
@@ -717,6 +720,7 @@
 										</option>
 									{{/each}}
 									</select>
+
 								</div>
 
 
@@ -728,7 +732,7 @@
 											style="width:${field.days_size};"
 											class="input-small xui-propertyGroup-input"
 											data-field="${field.days_name}"
-											value=""
+											value="{{if field.days_placeholder != model.get(field.days_name)}}${model.get(field.days_name)}{{/if}}"
 											placeholder="${field.days_placeholder}"
 											{{if field.days_maxLength}}maxlength="${field.days_maxLength}"{{/if}}
 											{{if field.days_validate}}{{html field.days_validate}}{{/if}} />
@@ -749,7 +753,7 @@
 											style="width:${field.price_size};"
 											class="input-small xui-propertyGroup-input"
 											data-field="${field.price_name}"
-											value=""
+											value="{{if field.price_placeholder != model.get(field.price_name)}}${model.get(field.price_name)}{{/if}}"
 											placeholder="${field.price_placeholder}"
 											{{if field.price_maxLength}}maxlength="${field.price_maxLength}"{{/if}}
 											{{if field.price_validate}}{{html field.price_validate}}{{/if}} />
@@ -1130,7 +1134,7 @@
 			                                            style="width:${dynamicComponentField.days_size};"
 			                                            class="input-small xui-propertyGroup-input"
 			                                            data-field="${dynamicComponentField.days_name}"
-			                                            value=""
+			                                            value="{{if dynamicComponentField.days_placeholder != model.get(dynamicComponentField.days_name)}}${model.get(dynamicComponentField.days_name)}{{/if}}"
 			                                            placeholder="${dynamicComponentField.days_placeholder}"
 			                                            {{if dynamicComponentField.days_maxLength}}maxlength="${dynamicComponentField.days_maxLength}"{{/if}}
 			                                            {{if dynamicComponentField.days_validate}}{{html dynamicComponentField.days_validate}}{{/if}} />
@@ -1151,7 +1155,7 @@
 			                                            style="width:${dynamicComponentField.price_size};"
 			                                            class="input-small xui-propertyGroup-input"
 			                                            data-field="${dynamicComponentField.price_name}"
-			                                            value=""
+			                                            value="{{if dynamicComponentField.days_placeholder != model.get(dynamicComponentField.days_name)}}${model.get(dynamicComponentField.days_name)}{{/if}}"
 			                                            placeholder="${dynamicComponentField.price_placeholder}"
 			                                            {{if dynamicComponentField.price_maxLength}}maxlength="${dynamicComponentField.price_maxLength}"{{/if}}
 			                                            {{if dynamicComponentField.price_validate}}{{html dynamicComponentField.price_validate}}{{/if}} />
@@ -1175,7 +1179,8 @@
 								<div class="propertyGroup_property_selectField propertyGroup_property_horizontalField  {{if field.className}}${field.className}{{/if}}">
                                     {{if dynamicComponentField.displayName}}
 									<div class="propertyGroup_property_label {{if dynamicComponentField.validate}}star_show{{/if}}">${dynamicComponentField.displayName}</div>
-									{{/if}}									<div class="propertyGroup_property_input">
+									{{/if}}
+									<div class="propertyGroup_property_input">
 										<select data-field="${dynamicComponentField.name}" name="${dynamicComponentField.name}" class="input-medium">
 										{{each(n, nav) W.component.getSelectSource(dynamicComponentField.source, component)}}
 											<option value="${nav.value}" {{if dynamicComponent.model.get(dynamicComponentField.name) == nav.value}}selected="selected"{{/if}}>
