--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -6,6 +6,7 @@
 
     .xui-listItem{
         background: #fff;
+        margin-bottom: 10px;
     }
     .xui-listInner{
         text-align: left;
