--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -1,58 +1,59 @@
 {% load workbench_filter %}
 
 {% ifequal component.type 'appkit.groupdescription' %}
-    <div class="wui-powerme-container
-        {% if component.model.color %}
-            {% if component.model.color == 'yellow' %} yellow {% else %}
-              {% if component.model.color == 'orange' %} orange {% else %}
-                {% if component.model.color == 'red' %} red {% else %}
-                    {% if component.model.color == 'new_year_red' %} new_year_red {% endif %}
-                {% endif %}
-              {% endif %}
-            {% endif %}
-        {% else %}yellow{% endif %}">
-        <div class="wui-i-background-image">
-            {% if component.model.background_image %}
-                <img src="{{ component.model.background_image }}">
-            {% else %}
-                <img src="/termite_static/img/component/powerme/top_default.png" style="padding: 80px 0;width: 150px;height: 110px;">
-            {% endif %}
-        </div>
+    <div class="wui-group-container">
         <div class="wui-i-body">
-            <div class="wui-i-end_time">开团截止日期：{{component.model.end_time}}</div>
-            <div class="wui-i-btngroup">
-                <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
-                <button class="wui-i-btn-notready wa-notready wui-hide">活动尚未开启,敬请期待</button>
-                <button class="wui-i-btn-power wa-power wui-hide"><span class="wa-power-btn-action">我要参团</span></button>
-                <button class="wui-i-btn-using wa-using wui-hide">我要开团</button>
-                <button class="wui-i-btn-using wa-using-join wui-hide">直接参团</button>
+            <div class="wui-i-help_group">
+                <div class="wui-i-shop_circle">
+                    <img src="/static/img/default_shop_avatar.png">
+                </div>
+                <div class="wui-i-title-pic">
+                </div>
+                <div class="wui-i-rules xa-rules">
+                    <div class="wui-i-title xa-i-title">
+                        <span class="wui-i-rules-title-content xa-i-rules-title-content">
+                            <i class="wui-i-star"></i><p>团购说明</p><i class="wui-i-star"></i>
+                        </span>
+                    </div>
+                    <div class="wui-i-rules-contentbox xa-i-rules-contentbox none">
+                        <div class="wui-i-closebtn xa-i-closebtn">
+                            ×
+                        </div>
+                        <div class="wui-i-rules-content xa-i-rules-content">
+                            <div class="wui-i-title-box xa-i-title-box">
+                                <p class="wui-i-title">团购说明</p>
+                            </div>
+                            <div class="wui-i-content-box xa-i-content-box">
+                                {{ component.model.rules|safe }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="wui-i-description xa-description cl">
                 <div class="wui-i-description-content">
-                    {{component.model.description|safe}}
+                    <div class="wui-i-title">{{ component.model.title }}</div>
+                    <div class="wui-i-end_time">开团截止日期：{{component.model.end_time}}</div>
+                    <div class="wui-i-btngroup">
+                        <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
+                        <button class="wui-i-btn-notready wa-notready wui-hide">活动尚未开启,敬请期待</button>
+                        <button class="wui-i-btn-power wa-power wui-hide"><span class="wa-power-btn-action">我要参团</span></button>
+                        <button class="wui-i-btn-using wa-using wui-hide">我要开团</button>
+                        <button class="wui-i-btn-using wa-using-join wui-hide">直接参团</button>
+                    </div>
+                    <div class="wui-i-states">
+                        <div class="wui-i-title">
+                            <span class="wui-i-helper-title-content">
+                                <i class="wui-i-star"></i><i class="wui-i-star"></i>
+                            </span>
+                        </div>
+                        <ul class="wa-top100">
+                            <li class="wui-i-top100-title" style="padding: 16px 10px 0;">
+                                <span style="margin-left: 18px">团员</span>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="wui-i-rules xa-rules">
-                <div class="wui-i-title">
-                    <span class="wui-i-rules-title-content">
-                        <i class="wui-i-star"></i><b>活动规则</b><i class="wui-i-star"></i>
-                    </span>
-                </div>
-                <div class="wui-i-rules-content">
-                    {{component.model.rules|safe}}
-                </div>
-            </div>
-            <div class="wui-i-states">
-                <div class="wui-i-title">
-                    <span class="wui-i-helper-title-content">
-                        <i class="wui-i-star"></i><i class="wui-i-star"></i>
-                    </span>
-                </div>
-                <ul class="wa-top100">
-                    <li class="wui-i-top100-title" style="padding: 16px 10px 0;">
-                        <span style="margin-left: 18px">团员</span>
-                    </li>
-                </ul>
             </div>
         </div>
     </div>
