店铺装修-富文本模块 解决上传图片之间的空白问题

--- a/weapp/termite/static/v4/css/widget.css
+++ b/weapp/termite/static/v4/css/widget.css
@@ -1362,7 +1362,11 @@ ul.wui-relatelink li h3{
     padding-left: 14px;
 }
 .wui-richtext p{
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
+    line-height: 1.2rem;
+}
+.wui-richtext p>img {
+    display: block;
 }
 /*===============================页头==========================*/
 /*.wui-pageheader {
