将单个供货商的订单也拆成子订单

--- a/weapp/mall/templates/mall/editor/order_detail.html
+++ b/weapp/mall/templates/mall/editor/order_detail.html
@@ -161,7 +161,7 @@
           </li>
       {% endfor %}
   {% else %}
-      <li class="xa-count active" data-total-status-value="-1"><a href="javascript:void(0);">物流信息{{ child_order.supplier }}</a></li>
+      <li class="xa-count active" data-total-status-value="-1"><a href="javascript:void(0);">物流信息</a></li>
   {% endif %}
       <li class="xa-count" data-total-status-value="0"><a href="javascript:void(0);">订单操作日志</a></li>
   </ul>
