--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -153,7 +153,7 @@
             method: 'post',
             args: {
                 webapp_owner_id: W.webappOwnerId,
-                id: W.appRecordId,
+                group_record_id: W.appRecordId,
                 fid: page_owner_member_id
             },
             success: function(data) {
