--- a/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/groupdescription/groupdescription.html
@@ -37,7 +37,23 @@
                     <div class="wui-i-choose_group_box">
                         <span>选择团购</span>
                         <span class="wui-i-end_time">开团截止日期：{{component.model.end_time}}</span>
-
+                        	<label for="radio_item_{{component.cid}}" style="display:block; padding: 3px 0px;">
+                                <span id="radio_item_{{component.cid}}" name="radio_{{component.parent_component.cid}}"
+                                      data-type="radio" span-type="selection"  class="selection-radio" data-input-name="{{ component.model.group_type }}">
+                                </span>
+                                <span class="ml5 xa-itemTitle" style="margin-left: 30px!important;line-height: 22px;">{{ component.model.group_type }}人团</span>
+                                <span class="ml5 xa-itemTitle" style="margin-left: 20px!important;line-height: 22px;">拼团时间{{ component.model.group_days }}天</span>
+                                <span class="ml5 xa-itemTitle" style="margin-left: 20px!important;line-height: 22px;">团购价：{{ component.model.group_price }}元</span>
+                            </label>
+                    </div>
+                    <div class="wui-i-group_box_progress none">
+                        <span>团购进度</span>
+                        <div class="wui-i-timing wa-timing">
+                            <b class="xa-day">{% if component.model.timing_value.day %}{{component.model.timing_value.day}}{% else %}99{% endif %}</b>天
+                            <b class="xa-hour">{% if component.model.timing_value.hour %}{{component.model.timing_value.hour}}{% else %}23{% endif %}</b>时
+                            <b class="xa-minute">{% if component.model.timing_value.minute %}{{component.model.timing_value.minute}}{% else %}59{% endif %}</b>分
+                            <b class="xa-second">{% if component.model.timing_value.second %}{{component.model.timing_value.second}}{% else %}59{% endif %}</b>秒
+                        </div>
                     </div>
                     <div class="wui-i-btngroup">
                         <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
