--- a/weapp/mall/templates/mall/editor/product_pool.html
+++ b/weapp/mall/templates/mall/editor/product_pool.html
@@ -23,7 +23,7 @@
     </ul>
     {% endif %}
     <div class="xa-productFilterView xui-filterPanel"></div>
-    <div class="panel panel-default mt20 xb-rightPanel">
+    <div class="panel panel-default mt20 xb-rightPanel" style="min-height:120px;">
         <div class="panel-heading">
             <label for="topSelectAll" class="xui-selectAll ml15">
                 <input type="checkbox" id="topSelectAll" class="xa-selectAll">全选
