--- a/weapp/mall/templates/mall/editor/product_pool.html
+++ b/weapp/mall/templates/mall/editor/product_pool.html
@@ -55,7 +55,7 @@
 {% block js %}
 {% verbatim %}
 <script id="products-view" type="text/x-jquery-tmpl">
-    <table id="productListTable" class="table table-bordered table-condensed xui-productList xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg {{if items.length == 0}}mb50{{/if}}">
+    <table id="productListTable" class="table table-bordered table-condensed xui-productList xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg">
         <thead>
             <tr>
                 <th width="250">商品信息</th>
